feat: keycloak, new yaml, home page comoponent for fallback
